--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -18,6 +18,11 @@ COPY frontend/ .
 
 # Build Next.js
 ENV NEXT_TELEMETRY_DISABLED=1
+
+# NEXT_PUBLIC_* vars must be set at build time
+ARG NEXT_PUBLIC_API_URL=""
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
 RUN npm run build
 
 # Production image
